# text-to-calendar

./: .gitignore  README.md  calendar.ics  example_calendar.ics  pyproject.toml
client/ptc_client/: app.py
client/ptc_client/.streamlit/: config.toml
client/ttc_client/: app.py  fastapi_client.py  helpers.py
core/ptc_core/: file_helper.py  ics_generator.py
core/ptc_core/models/: calendar.py  calendar_event.py
core/ptc_core/utils/: date_utils.py
core/ttc_core/: ics_generator.py
core/ttc_core/models/: calendar.py
core/ttc_core/utils/: date_utils.py  name_utils.py
docs/: todo.md
notebooks/: llm_service.ipynb
server/ptc_server/: app_services.py  config.py  logger_config.py  main.py
server/ptc_server/clients/llm/: gemini_client.py  llm_client.py
server/ptc_server/mocks/: mock_llm_client.py
server/ptc_server/routes/: endpoints.py
server/ptc_server/services/: llm_service.py
server/ttc_server/: app_services.py  config.py  exception_handlers.py  logger_config.py  main.py
server/ttc_server/clients/llm/: gemini_client.py  llm_client.py
server/ttc_server/mocks/: example_calendar.ics  mock_llm_client.py
server/ttc_server/routes/: endpoints.py
server/ttc_server/services/: calendar_event_link_generator.py  llm_service.py
tests/: test_ics_generator.py  test_llm_service.py
tests/fixtures/: example_model_response.txt
tests/mocks/: mock_llm_client.py
