[project]
name = "prompt-to-calendar"
version = "0.1.0"
description = "Turns a plain text input into an .ics file compatible with Google Calendar, iCloud Calendar, etc."
authors = [
    {name = "toronyx",email = "tommi.ronayne@taurho.co.uk"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "google-genai (>=1.67.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
