[project]
name = "text-to-calendar"
version = "0.1.0"
description = "Turns a plain text input into an .ics file compatible with Google Calendar, iCloud Calendar, etc."
authors = [
    {name = "toronyx",email = "tommi.ronayne@taurho.co.uk"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "google-genai (>=1.67.0,<2.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "streamlit-javascript (>=0.1.5,<0.2.0)"
]


# Tells Poetry which folders are packages
[[tool.poetry.packages]]
include = "ttc_client"
from = "client"

[[tool.poetry.packages]]
include = "ttc_core"
from = "core"

[[tool.poetry.packages]]
include = "ttc_server"
from = "server"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.15.6,<0.16.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.ruff]
line-length = 120